Add refresh token sessions
