# internal/controller/grpc/v1/user.go
@@ -30,7 +30,7 @@ func (c *AuthController) Register(ctx context.Context, req *v1.RegisterRequest) 
 
 // Login -.
 func (c *AuthController) Login(ctx context.Context, req *v1.LoginRequest) (*v1.LoginResponse, error) {
-	token, err := c.u.Login(ctx, req.GetEmail(), req.GetPassword())
+	tokens, err := c.u.Login(ctx, req.GetEmail(), req.GetPassword())
 	if err != nil {
 		c.l.Error(err, "grpc - v1 - Login")
 
@@ -41,7 +41,7 @@ func (c *AuthController) Login(ctx context.Context, req *v1.LoginRequest) (*v1.L
 		return nil, status.Error(codes.Internal, "internal server error")
 	}
 
-	return &v1.LoginResponse{Token: token}, nil
+	return &v1.LoginResponse{Token: tokens.AccessToken}, nil
 }
 
 // GetProfile -.
